@@ -1,61 +1,64 @@
 package com.example.demo.service;
 
-import java.security.Key;
-import java.util.Date;
-import java.util.List;
-import java.util.function.Function;
-
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 
-import com.example.demo.entity.SystemUser;
-
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.SignatureAlgorithm;
-import io.jsonwebtoken.io.Decoders;
-import io.jsonwebtoken.security.Keys;
+import com.example.demo.util.JwtUtils;
 
 @Service
 public class JwtService {
 
-    private static final String SECRET = "UGVha1BlcmZvcm0yMDI0U3VwZXJTZWNyZXRLZXlGb3JIbWFjU0hBMjU2U2lnbmluZ0F0TGVhc3QyNTZCaXRzTG9uZw==";
-    private static final long EXPIRATION = 86400000L;
+    private final JwtUtils jwtUtils;
 
-    private Key getSigningKey() {
-        return Keys.hmacShaKeyFor(Decoders.BASE64.decode(SECRET));
+    public JwtService(JwtUtils jwtUtils) {
+        this.jwtUtils = jwtUtils;
     }
 
-    public String generateToken(SystemUser user) {
-        return Jwts.builder()
-                .setSubject(user)
-                .setIssuedAt(new Date())
-                .setExpiration(new Date(System.currentTimeMillis() + EXPIRATION))
-                .signWith(getSigningKey(), SignatureAlgorithm.HS256)
-                .compact();
+    public String generateToken(String username) {
+        throw new UnsupportedOperationException(
+                "Use generateToken(UserDetails)"
+        );
+    }
+
+    public String generateToken(UserDetails userDetails) {
+        return jwtUtils.generateToken(userDetails);
     }
 
     public String extractUsername(String token) {
-        return extractClaim(token, Claims::getSubject);
-    }
-
-    public <T> T extractClaim(String token, Function<Claims, T> resolver) {
-        return resolver.apply(Jwts.parserBuilder().setSigningKey(getSigningKey()).build()
-                .parseClaimsJws(token).getBody());
+        return jwtUtils.extractUsername(token);
     }
 
     public boolean isTokenValid(String token) {
+
         try {
-            return !extractClaim(token, Claims::getExpiration).before(new Date());
+            jwtUtils.extractAllClaims(token);
+            return true;
         } catch (Exception e) {
             return false;
         }
     }
 
-    public UsernamePasswordAuthenticationToken getAuthentication(String token) {
-        String username = extractUsername(token);
-        return new UsernamePasswordAuthenticationToken(username, null,
-                List.of(new SimpleGrantedAuthority("ROLE_USER")));
+    public Authentication getAuthentication(String token) {
+
+        String username =
+                jwtUtils.extractUsername(token);
+
+        return new org.springframework.security.authentication
+                .UsernamePasswordAuthenticationToken(
+                        username,
+                        null,
+                        java.util.Collections.emptyList()
+                );
+    }
+
+    public boolean isTokenValid(
+            String token,
+            UserDetails userDetails) {
+
+        return jwtUtils.isTokenValid(
+                token,
+                userDetails
+        );
     }
 }
